Changing PPP3 internal headers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,7 +61,48 @@
     "iterator": "cpp",
     "memory": "cpp",
     "memory_resource": "cpp",
-    "numeric": "cpp"
+    "numeric": "cpp",
+    "cctype": "cpp",
+    "clocale": "cpp",
+    "cmath": "cpp",
+    "cstdarg": "cpp",
+    "cstddef": "cpp",
+    "cstdio": "cpp",
+    "cstdlib": "cpp",
+    "cstring": "cpp",
+    "ctime": "cpp",
+    "cwchar": "cpp",
+    "cwctype": "cpp",
+    "atomic": "cpp",
+    "bit": "cpp",
+    "charconv": "cpp",
+    "compare": "cpp",
+    "concepts": "cpp",
+    "condition_variable": "cpp",
+    "cstdint": "cpp",
+    "ratio": "cpp",
+    "format": "cpp",
+    "iomanip": "cpp",
+    "istream": "cpp",
+    "limits": "cpp",
+    "mutex": "cpp",
+    "numbers": "cpp",
+    "print": "cpp",
+    "span": "cpp",
+    "streambuf": "cpp",
+    "text_encoding": "cpp",
+    "thread": "cpp",
+    "variant": "cpp",
+    "__bit_reference": "cpp",
+    "__hash_table": "cpp",
+    "__locale": "cpp",
+    "__node_handle": "cpp",
+    "__split_buffer": "cpp",
+    "__threading_support": "cpp",
+    "__verbose_abort": "cpp",
+    "ios": "cpp",
+    "locale": "cpp",
+    "stack": "cpp"
   },
   "gcc-general-flags": "-std=c++20 -fdiagnostics-color=always -fno-omit-frame-pointer -fvar-tracking -fvar-tracking-assignments -g",
   "clang-general-flags": "-std=c++20 -fdiagnostics-color=always -fno-omit-frame-pointer -g",
