Clear vscode setup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -151,22 +151,16 @@
   "windows-include": "-I${config:windows-include-path}",
   "win-gui-src-dir": "src\\ppp3\\graphics",
   "win-gui-build-dir": "${config:win-build-dir}\\graphics",
-  "win-moc-file": "${workspaceFolder}\\src\\ppp3\\graphics\\GUI_private_moc.cpp",
-  "win-gui-src": "${workspaceFolder}\\src\\ppp3\\graphics\\Colormap.cpp ${workspaceFolder}\\src\\ppp3\\graphics\\Graph.cpp ${workspaceFolder}\\src\\ppp3\\graphics\\Gui.cpp ${workspaceFolder}\\src\\ppp3\\graphics\\Simple_window.cpp ${workspaceFolder}\\src\\ppp3\\graphics\\Window.cpp ${config:win-moc-file}",
   "wqt-ver": "6.4.2",
   "w-qt": "C:\\Qt\\${config:wqt-ver}\\mingw_64",
   "w-psx-qt": "C:/Qt/${config:wqt-ver}/mingw_64",
-  "win-gui-inc": "${config:windows-include-path};${config:w-psx-qt}/include;${config:w-psx-qt}/include/QtCore;${config:w-psx-qt}/include/QtWidgets;${config:w-psx-qt}/include/QtGui",
   "win-gui-hdr-dir": "${config:windows-include-path}\\ppp3\\graphics",
   "win-gui-inc-flag": "-I${config:windows-include-path} -isystem ${config:w-psx-qt}/include -isystem ${config:w-psx-qt}/include/QtCore -isystem ${config:w-psx-qt}/include/QtWidgets -isystem ${config:w-psx-qt}/include/QtGui",
-  "win-gui-lib-path": "${config:w-psx-qt}/libs",
   "win-gui-libs": "-lQt6Core -lQt6Widgets -lQt6Gui",
   "win-gui-defs": "-DQT_STATIC_BUILD -DQT_GUI_LIB -DQT_CORE_LIB -DQT_STATIC",
-  "win-gui-deps": "${config:win-gui-src} ${config:win-gui-libs} ${config:win-gui-defs}",
   "win-clang-cxx": "C:\\Program Files\\LLVM\\bin\\clang++.exe",
   "win-gcc-cxx": "C:\\ProgramData\\mingw64\\mingw64\\bin\\g++.exe",
-  "win-moc-exe": "${config:w-qt}\\bin\\moc.exe",
   "win-qtdeploy": "${config:w-qt}\\bin\\windeployqt.exe",
-  "win-gui-final": "${config:win-build-dir}\\graphics\\${fileBasenameNoExtension}.exe",
+  "win-gui-final": "${config:win-gui-build-dir}\\${fileBasenameNoExtension}.exe",
   "editor.formatOnSave": true
 }
