--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -138,9 +138,10 @@
     "qcheckbox": "cpp",
     "qapplication": "cpp"
   },
-  "gcc-general-flags": "-std=c++20 -fdiagnostics-color=always -fno-omit-frame-pointer -fvar-tracking -fvar-tracking-assignments -g",
+  "general-flags": "-static -std=c++20 -fdiagnostics-color=always -fno-omit-frame-pointer -g",
+  "gcc-general-flags": "${config:general-flags} -fvar-tracking -fvar-tracking-assignments",
+  "clang-general-flags": "${config:general-flags}",
   "win-build-dir": "${workspaceFolder}\\build",
-  "clang-general-flags": "-std=c++20 -fdiagnostics-color=always -fno-omit-frame-pointer -g",
   "clang-general-flags-window": "${config:clang-general-flags} -target x86_64-mingw64 -fms-extensions",
   "linux-output-file": "${workspaceFolder}/build/${relativeFileDirname}/${fileBasenameNoExtension}",
   "linux-output": "-o \"${config:linux-output-file}\"",
