--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,7 +105,8 @@
     "__verbose_abort": "cpp",
     "ios": "cpp",
     "locale": "cpp",
-    "stack": "cpp"
+    "stack": "cpp",
+    "stdio.h": "c"
   },
   "gcc-general-flags": "-std=c++20 -fdiagnostics-color=always -fno-omit-frame-pointer -fvar-tracking -fvar-tracking-assignments -g",
   "clang-general-flags": "-std=c++20 -fdiagnostics-color=always -fno-omit-frame-pointer -g",
